# PSU_USRP

./: .gitignore
control_programs/auto_single_freq/: Makefile  auto_single.py  main.cpp  nope  single_freq
control_programs/single_freq/: Makefile  auto_single.py  main.cpp  single_freq
control_programs/swept_freq/: Makefile  main.cpp  run_sweep.sh  swept_freq
docs/: RX_ANTENNA2_GA1.NEC  rx_antenna2.NEC  rx_antenna3.NEC  tx_high_freq2.NEC  tx_high_freq2_GA_11_30.NEC  tx_high_freq2_sandbox_160615.NEC  tx_low_freq.NEC  tx_low_freq2.NEC  tx_low_freq_del_multiwire_160615.NEC
docs/antennas 160620/: LPDA Notes 160620.docx  lpda.m.txt  tx_low_freq_btfd.NEC  tx_low_freq_btfd_3wire.NEC
docs/antennas 160621/: tx_low_freq_lpda_160621_center_source.NEC  tx_low_freq_lpda_160621_split_source.NEC
docs/antennas 160622/: tx_low_freq2.NEC  tx_low_freq_bowtie_160622.NEC
docs/opt/: RX_ANTENNA2-01.nec  RX_ANTENNA2-02.nec  RX_ANTENNA2-03.nec  RX_ANTENNA2-05.nec  RX_ANTENNA2-06.nec  RX_ANTENNA2-07.nec  RX_ANTENNA2-08.nec  RX_ANTENNA2-09.nec  RX_ANTENNA2-10.nec  RX_ANTENNA2-11.nec  RX_ANTENNA2-12.nec  RX_ANTENNA2-14.nec  RX_ANTENNA2-15.nec  RX_ANTENNA2-18.nec  RX_ANTENNA2-20.nec  RX_ANTENNA2-23.nec  RX_ANTENNA2-24.nec  RX_ANTENNA2-26.nec  RX_ANTENNA2-27.nec  RX_ANTENNA2-29.nec  RX_ANTENNA2-30.nec  RX_ANTENNA2_021-13.nec  RX_ANTENNA2_025-30.nec  TX_LOW_FREQ2-01.nec  TX_LOW_FREQ2-02.nec  (+92 more)
include/: global_variables.h
ionosonde_server/: CMakeLists.txt  capture_spectrum.cpp  doppler_process.cpp  example.txt  global_variables.h  ionosonde_server  lp_filter.cpp  lp_filter.hpp  main.cpp  matched_filter.cpp  matched_filter.hpp  output_160906.txt  periodogram.txt  sounder.cpp  sounder.hpp  start_ionosonde.sh  transceive.cpp  utils.cpp
ionosonde_server/cmake/: FindFFTW.cmake
utils/: global_variables.h  h5view.py  h5view_ei.py
(+7 files in other folders)
